--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.2",
+    "antd-input-otp": "^2.0.5",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "lodash": "^4.17.21",
