--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL="http://localhost:5001/api"
+VITE_API_BASE_URL_5001="http://localhost:5001/api"
+VITE_API_BASE_URL_5002="http://localhost:5002/api"
